--- a/apps/clothing_dojo/static/clothing_dojo/css/cdProductCSS.css
+++ b/apps/clothing_dojo/static/clothing_dojo/css/cdProductCSS.css
@@ -190,6 +190,12 @@ div.other_products img{
         display:none;
     }
 }
+@media only screen and (min-width:1090px){
+    div.body{
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
 @media only screen and (min-width:1024px){
     div.body{
         text-align:left;
@@ -218,5 +224,6 @@ div.other_products img{
     }
     div.other_products{
         display:block;
+        margin-bottom:20px;
     }
 }
