--- a/apps/clothing_dojo/templates/clothing_dojo/clothingDojo_main.html
+++ b/apps/clothing_dojo/templates/clothing_dojo/clothingDojo_main.html
@@ -8,12 +8,36 @@
     {% load static %}
     <link rel='stylesheet' type='text/css' href='{% static 'clothing_dojo/css/cdHeaderCSS.css' %}'>
     <link rel='stylesheet' type='text/css' href='{% static 'clothing_dojo/css/clothingDojo_mainCSS.css' %}'>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href='{% static 'clothing_dojo/css/proxima_nova/fonts/fonts.css' %}'/>
     
+    <link rel="stylesheet" type="text/css" href='{% static 'clothing_dojo/css/proxima_nova/fonts/fonts.css' %}'/>
+    <script>
+        function checkWidth(){
+            var width=$(window).width();
+
+            if(width>=1024){
+                $('.claim_shirt img').attr('src', '{% static 'clothing_dojo/images/claim_3.jpg' %}');
+            }
+            else{
+                $('.claim_shirt img').attr('src', '{% static 'clothing_dojo/images/closeup.png' %}');
+            }
+        }
+        $(document).ready(function(){
+            checkWidth();     
+            $(window).resize(function(){
+                var width=$(window).width();
+                if(width>=1024){
+                $('.claim_shirt img').attr('src', '{% static 'clothing_dojo/images/claim_3.jpg' %}');
+                }
+                else{
+                    $('.claim_shirt img').attr('src', '{% static 'clothing_dojo/images/closeup.png' %}');
+                }
+            });
+        });
+    </script>
 </head>
 <body>
     <div class='wrapper'>
@@ -28,14 +52,14 @@
         </div>
         <div class='body'>
             <div class='claim_shirt'>
-                <img src='{% static 'clothing_dojo/images/closeup.png' %}' alt='Image of the Coding Dojo T-Shirt'>
+                <img src='{% static 'clothing_dojo/images/claim_2.png' %}' alt='Image of the Coding Dojo T-Shirt'>
                 <a href='#'>Claim Free Shirt Now!</a>
             </div>
             <div class='products_label'>
-                <p>PRODUCTS</p>
                 {% for message in cart_success %}
                     <p class='green'>{{message}}</p>
                 {% endfor %}
+                <p>PRODUCTS</p>
             </div>
             <div class='products'>
                 <p class='only_desktop'>Products</p>
