--- a/apps/clothing_dojo/templates/clothing_dojo/clothingDojo_productPage.html
+++ b/apps/clothing_dojo/templates/clothing_dojo/clothingDojo_productPage.html
@@ -21,9 +21,9 @@
             <p class='title'>Clothing Dojo</p>
         </div>
         <div class='navbar'>
-            <a class='cart' href='#'><img src='{% static 'clothing_dojo/images/cart.png' %}' alt='Cart'></a>
-            <a class='platform' href='https://learn.codingdojo.com/'>PLATFORM</a>
-            <p>Welcome, Ashwin</p>
+            <a class='cart' href='/cart/'><img src='{% static 'clothing_dojo/images/cart.png' %}' alt='Cart'></a>
+            <a class='platform' href='/logout/'>PLATFORM</a>
+            <p>Welcome, {{user.first_name}}</p>
         </div>
         <div class='body'>
             <a href='/'>BACK</a>
@@ -53,14 +53,14 @@
                     <p><span class='bold'>Quantity: </span>
                         <select name='quantity'>
                             <option value='1'>1</option>
-                            <option value='1'>2</option>
-                            <option value='1'>3</option>
-                            <option value='1'>4</option>
-                            <option value='1'>5</option>
-                            <option value='1'>6</option>
-                            <option value='1'>7</option>
-                            <option value='1'>8</option>
-                            <option value='1'>9</option>
+                            <option value='2'>2</option>
+                            <option value='3'>3</option>
+                            <option value='4'>4</option>
+                            <option value='5'>5</option>
+                            <option value='6'>6</option>
+                            <option value='7'>7</option>
+                            <option value='8'>8</option>
+                            <option value='9'>9</option>
                         </select>
                     </p>
                     <div>
