--- a/apps/clothing_admin/templates/clothing_admin/admin_products.html
+++ b/apps/clothing_admin/templates/clothing_admin/admin_products.html
@@ -69,7 +69,7 @@
                                 {% endfor %}
                             </td>
                             <td>${{product.cost}}</td>
-                            <td>{{product.orders.count}}</td>
+                            <td>{{product.num_sold}}</td>
                             <td><a href='/admin/edit/{{product.id}}/'>Edit</a></td>
                             <td><a class='del' href='/admin/delete/{{product.id}}/'>Delete</a></td>
                         </tr>
