Before orders page

--- a/apps/clothing_admin/templates/clothing_admin/admin_orders.html
+++ b/apps/clothing_admin/templates/clothing_admin/admin_orders.html
@@ -8,11 +8,26 @@
     {% load static %}
     <link rel='stylesheet' type='text/css' href='{% static 'clothing_admin/css/adminHeaderCSS.css' %}'>
     <link rel='stylesheet' type='text/css' href='{% static 'clothing_admin/css/adminOrdersCSS.css' %}'>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href='{% static 'clothing_admin/css/proxima_nova/fonts/fonts.css' %}'/>
+    <script>
+        $(document).ready(function(){
+            $('#search').keyup(function(){
+                console.log('Catching key up')
+                $.ajax({
+                    method:'POST',
+                    url:'/admin/searchAPI/',
+                    data:$('.searchGroup').serialize()
+                })
+                .done(function(response){
+                    console.log('Recieved response', response)
+                });
+            });
+        });
+    </script>
 </head>
 <body>
     <div class='wrapper'>
@@ -39,7 +54,7 @@
 
             <form class='searchGroup'>
                 {% csrf_token %}
-                <input type='search' name='adminSearch' placeholder="Search by Name, Number, Product, or Date">
+                <input id='search' type='search' name='adminSearch' placeholder="Search by Name or Email">
                 <input class='submit' type='submit' value='Go'>
             </form>
         </div>
