--- a/apps/clothing_dojo/templates/clothing_dojo/clothingDojo_main.html
+++ b/apps/clothing_dojo/templates/clothing_dojo/clothingDojo_main.html
@@ -45,6 +45,7 @@
         </div>
         <div class='navbar'>
             <a class='cart' href='cart/'><img src='{% static 'clothing_dojo/images/cart.png' %}' alt='Cart'></a>
+            <!-- <a href='#'>Orders</a> -->
             <a class='platform' href='/logout/'>PLATFORM</a>
             <p>Welcome, {{user.first_name}}</p>
         </div>
