Before orders page

--- a/apps/clothing_admin/templates/clothing_admin/admin_orders.html
+++ b/apps/clothing_admin/templates/clothing_admin/admin_orders.html
@@ -24,6 +24,7 @@
                 })
                 .done(function(response){
                     console.log('Recieved response', response)
+                    $('tbody').html(response)
                 });
             });
         });
