--- a/apps/clothing_dojo/templates/clothing_dojo/clothingDojo_freeShirt.html
+++ b/apps/clothing_dojo/templates/clothing_dojo/clothingDojo_freeShirt.html
@@ -32,6 +32,7 @@
         </div>
         <div class='navbar'>
             <a class='cart' href='/cart/'><img src='{% static 'clothing_dojo/images/cart.png' %}' alt='Cart'></a>
+            <a class='orders' href='/viewOrders/'>ORDERS</a>
             <a class='platform' href='/logout/'>PLATFORM</a>
             <p>Welcome, {{user.first_name}}</p>
         </div>
