--- a/apps/clothing_dojo/static/clothing_dojo/css/cdHeaderCSS.css
+++ b/apps/clothing_dojo/static/clothing_dojo/css/cdHeaderCSS.css
@@ -39,7 +39,7 @@ div.navbar>*{
 }
 div.navbar p{
     color:rgb(151,151,151);
-    margin-right:10px;
+    margin-right:5px;
     margin-top:12px;
 }
 div.navbar a.platform{
@@ -48,17 +48,21 @@ div.navbar a.platform{
     color:rgb(241,244,248);
     padding:5px 10px;
     /* margin-top:5px; */
-    margin-left:10px;
+    margin-left:5px;
     margin-right:15px;
     margin-top:7px;
 }
 div.navbar a.cart{
     float:left;
+    border-radius:4px;
 }
 div.navbar a.cart img{
     height:40px;
     width:40px;
     margin:0px;
+}
+div.navbar a.cart:hover{
+    background:rgb(49, 137, 180);
 }
 div.navbar a:hover{
     background:rgb(0, 117, 153);
@@ -76,6 +80,19 @@ div.footer p{
     color:rgb(241,244,248);
     font-size:13pt;
     text-align:center;
+}
+div.navbar a.orders{
+    float:left;
+    background:rgb(0,154, 199);
+    border-radius:4px;
+    color:rgb(241,244,248);
+    font-size:12pt;
+    padding:4px 8px;
+    margin-top:9px;
+}
+div.navbar a.orders:hover{
+    background:rgb(0, 117, 153);
+    text-decoration:none;
 }
 @media only screen and (max-width:700px){
     div.header p.title{
@@ -97,6 +114,12 @@ div.footer p{
         margin:auto;
         /* background:rgb(241, 244, 248); */
         /* padding:0px 20px; */
+    }
+    div.navbar a.platform{
+        margin-left:10px;
+    }
+    div.navbar p{
+        margin-right:10px;
     }
     div.wrapper{
         /* background:var(--diag) */
