--- a/apps/clothing_admin/static/clothing_admin/css/adminOrdersCSS.css
+++ b/apps/clothing_admin/static/clothing_admin/css/adminOrdersCSS.css
@@ -34,3 +34,18 @@ form.searchGroup input.submit{
     font-size:14pt;
     border-radius:6px;
 }
+div.pages a{
+    font-size:16pt;
+    border:1px solid rgb(37,37,45);
+    padding:4px 8px;
+    margin-left:3px;
+    margin-right:3px;
+}
+div.pages{
+    margin-top:15px;
+    margin-left:30px;
+}
+div.pages a.current{
+    background:rgb(37,37,45);
+    color:rgb(241,244,248);
+}
